# digikam-software-compilation

./: .gitignore  .gitslave  .gitslave.bundle  .gitslave.devel  CMakeLists.txt  DEPENDENCIES  NEWS  README  README.LOCAL  README.MACOSX  README.WINDOWS  README.git  bootstrap.bat  bootstrap.linux  bootstrap.local  bootstrap.macports  bootstrap.mageia  bootstrap.mandriva  bootstrap.mingw.bat  bootstrap.msvc.bat  bootstrap.mxe  download-repos  gits
cmake/modules/: FindKSane.cmake  FindKexiv2.cmake  FindKface.cmake  FindKipi.cmake
cmake/modules/digikamsc-compile-libkvkontakte/: FindLibKVkontakte.cmake
cmake/templates/: cmake_uninstall.cmake.in
debian/: NEWS.Debian  changelog  control  copyright  digikam-data.install  digikam-doc.install  digikam-private-libs.install  digikam-private-libs.lintian-overrides  digikam.docs  digikam.install  digikam.manpages  kipi-plugins-common.install  kipi-plugins.docs  kipi-plugins.install  rules  showfoto.install  showfoto.manpages  watch
debian/man/: digikam.1  showfoto.1
debian/source/: lintian-overrides
doc/: CMakeLists.txt
extra/: CMakeLists.txt
extra/libmediawiki/: TODO
project/: bootstrap.opencv-minimal
project/appimage/: 01-build-centos6.sh  01-build-linux.sh  02-build-extralibs.sh  03-build-digikam.sh  04-build-appimage.sh  KF5DEPENDENCIES  README  README.txt  common.sh  config.sh  kdevelop-recipe-centos6.sh  makeall.sh
project/appimage/data/: AppRun
project/appimage/icon-rcc/: CMakeLists.txt
project/appimage/patches/: exiv2-trunk.patch  kio-signals-names.patch  knotifications-drop-phonon.patch  libgphoto2-jpegturbo.patch  marble-relativeinstallpath.patch
project/bundles/appimage/: 01-build-centos6.sh  02-build-extralibs.sh  03-build-digikam.sh  04-build-appimage.sh  README  common.sh  config.sh  makeall.sh  update.sh
project/bundles/appimage/data/: AppRun
project/bundles/appimage/patches/: kguiaddons-helpurl.patch
project/bundles/macports/: 01-build-macports.sh  02-build-extralibs.sh  03-build-digikam.sh  04-build-installer.sh  README  common.sh  config.sh  fixbundledatapath.sh  makeall.sh  rll.py  update.sh
project/bundles/macports/data/: releasenotes.html
project/bundles/macports/icon-rcc/: CMakeLists.txt  main.cpp
project/bundles/macports/installer/: ABOUT.txt  digikam.pkgproj
project/bundles/macports/tools/: console.sh  macports-install.sh  macports-uninstall.sh  macports-update.sh
project/bundles/mxe/: 01-build-mxe.sh  02-build-extralibs.sh  02-new.sh  03-build-digikam.sh  04-build-installer.sh  README  common.sh  config.sh  makeall.sh  rll.py  update.sh
project/bundles/mxe/data/: releasenotes.html
project/bundles/mxe/icon-rcc/: CMakeLists.txt
project/bundles/mxe/installer/: README  TODO  digikam.nsi  events_functions.nsh  process_running.nsh  readme_page.nsh  reboot_required.nsh
project/bundles/mxe/png2ico/: CMakeLists.txt
project/documents/: CodingSprint2010.ods
project/macosx/: 01-build-macports.sh  02-build-extralibs.sh  03-build-digikam.sh  04-build-installer.sh  04-build-package.sh  BUILD.txt  Icons.icns  Info.plist  KF5DEPENDENCIES  README  common.sh  config.sh  configbundlepkg.sh  macports-install.sh  macports-uninstall.sh  macports-update.sh  make-app-bundle  makeall.sh  rll.py
project/macosx/bundle/: 01-build-macports.sh  02-build-digikam.sh  02-build-extralibs.sh  03-build-digikam.sh  03-build-package.sh  03-make-package.sh  04-build-package.sh  KF5DEPENDENCIES  README  build-digikam.sh  configbundlepkg.sh  console.sh  make-package.sh  rll.py
project/macosx/bundle/digikam-portfile/: Portfile  Portfile-orig.480  digikam-mysql-2015-04-14.diff  digikam-mysql-490.diff
project/macosx/bundle/package/: digikam.pkgproj
project/macosx/common/: common.sh  configbundlepkg.sh
project/macosx/data/: releasenotes.html
project/macosx/digikam-package/: README  build-digikam.sh  make-package.sh
project/macosx/digikam-package/package/: digikam.pkgproj  postinstall  preinstall
project/macosx/icon-rcc/: CMakeLists.txt
project/macosx/installer/: digikam.pkgproj
project/macosx/kde/digikam/: Portfile
project/macosx/macports/: macports-install.sh  macports-uninstall.sh  macports-update.sh
project/macosx/patches/: marble-libs-install-path.patch
project/macosx/tools/: console.sh  macports-uninstall.sh  macports-update.sh
project/macports/: 01-build-macports.sh  02-build-extralibs.sh  03-build-digikam.sh  04-build-installer.sh  KF5DEPENDENCIES  README  common.sh  config.sh  makeall.sh
project/macports/data/: releasenotes.html
project/macports/installer/: digikam.pkgproj
project/macports/patches/: breeze-icons.patch  marble-libs-install.patch
project/macports/tools/: macports-install.sh
project/mxe/: 01-build-mxe.sh  02-build-extralibs.sh  03-build-digikam.sh  04-build-installer.sh  KF5DEPENDENCIES  README  bundledlls.py  common.sh  config.sh  configbundlemxe.sh  digikam_wine.sh  makeall.sh  mingw-bundledlls.py  rll.py  showfoto_wine.sh
project/mxe/data/: qt.conf  releasenotes.html
project/mxe/icon-rcc/: CMakeLists.txt
project/mxe/installer/: README  RELEASENOTES.txt  TODO  digikam.nsi  releasenotes.html
project/mxe/patches/: kinit-mingw-support.patch  kio-drop-ktextwidgets.patch  marble-libs-install.patch
project/mxe/png2ico/: CMakeLists.txt
project/release/: fetch_l10n.rb  fetch_l10n_doc.rb  fetch_l10n_po.rb
project/reports/: ccpcheck.sh  coverity.sh  digikam-3.0.0-0.14.rc.fc19.CovertyReport.err  digikam-3.0.0-0.14.rc.fc19.CovertyReport.err.txt  extralibs-3.0.0-0.14.rc.fc19.CovertyReport.err.txt  kipiplugins-3.0.0-0.14.rc.fc19.CovertyReport.err.txt
project/scripts/: bootstrap-marble.sh  bootstrap-qtav.sh  bootstrap.opencv-minimal  bootstrap.opencv-minimal-linux.sh  bootstrap.opencv-minimal-msvc.bat  dropextraspaces.sh  scankdedep.sh  tabs2spaces.sh
project/windows/: RELEASENOTES.txt  TODO  digikam.nsi
